<resources>
    <string name="app_name">AB Remote Wallpaper</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="rate_now">Rate Now</string>
    <string name="email_id_hint">Email Id</string>
    <string name="password_hint">Password</string>
    <string name="login_button_text">Login</string>
    <string name="forgot_password_text">Forgot Password</string>
    <string name="sign_up_button_text">Sign Up</string>
    <string name="username_text">Username</string>
    <string name="password_reset_title">Password Reset</string>
    <string name="password_reset_content">Enter your email address and you will receive password reset link.</string>
    <string name="invalid_email_id_error">Enter proper email address</string>
    <string name="password_reset_email_sent">Email is sent to your mailbox.</string>
    <string name="empty_password_error">Enter password</string>
    <string name="login_failed_error">Authentication failed.</string>
    <string name="invalid_user_error">Invalid User</string>
    <string name="invalid_password_error">Invalid password</string>
    <string name="unknown_login_error">Error logging in, try again later.</string>
    <string name="empty_username_error">Enter username</string>
    <string name="invalid_character_username_error">Invalid character in username</string>
    <string name="account_exists_error">Account already exists</string>
    <string name="weak_password_error">Weak password, enter at least 6 characters</string>
    <string name="weak_email_error">Weak email, enter proper email</string>
    <string name="unknown_sign_up_error">Error creating user, try again later.</string>
    <string name="username_clash_error">Username Already Exists.</string>
    <string name="google_sign_up_button">Sign Up using Google</string>
    <string name="network_error">Network Error, try again later!</string>
    <string name="unknown_error">Unknown Error, try again later!</string>
    <string name="error_self_username">Can\'t enter your own User id</string>
    <string name="friend_request_sent_toast">Request Sent</string>
    <string name="add_friend_title">Add friend</string>
    <string name="add_friend_pos">Add</string>
    <string name="add_friend_content">Enter User Name of person you want to add as friend.</string>
    <string name="error_zero_friends">No Friends! Swipe down to refresh</string>
    <string name="friend_list_fetch_unknown_error">Error fetching Friend List, try again later.</string>
    <string name="block_list_fetch_unknown_error">Error fetching Block List, try again later.</string>
    <string name="request_list_fetch_unknown_error">Error fetching Request List, try again later.</string>
    <string name="error_no_friend_requests">No Friend Requests! Swipe down to refresh</string>
    <string name="requests_fetch_unknown_error">Error fetching Friend Requests, try again later.</string>
    <string name="friend_already_added_error">User is already friend</string>
    <string name="photo_upload_title">Please wait</string>
    <string name="photo_upload_content">Uploading </string>
    <string name="title_sign_out">Sign Out</string>
    <string name="title_change_wallpaper">Change Wallpaper</string>
    <string name="notification_token">notification_token</string>
    <string name="pref_username">pref_username</string>
    <string name="google_signin_error">Error signing in with Google.</string>
    <string name="hint_display_name">Name</string>
    <string name="empty_display_name_error">Enter Name</string>
    <string name="no_network_error">No network</string>
    <string name="block_user">Block</string>
    <string name="title_block_list">Block List</string>
    <string name="title_unblock">Unblock</string>
    <string name="title_accept">Accept</string>
    <string name="title_reject">Reject</string>
    <string name="title_block">Block</string>
    <string name="title_remove_friend">Remove Friend</string>
    <string name="error_no_requests">No New Requests! Swipe down to refresh</string>
    <string name="error_no_blocked_friends">No Blocked Friends! Swipe down to refresh</string>
    <string name="cancel">Cancel</string>
    <string name="permission_grant_title">Permission Needed</string>
    <string name="permission_grant_content">To store wallpapers in SD Card, please grant storage access permission</string>
    <string name="permission_grant_pos">Grant</string>
    <string name="title_history">History</string>
    <string name="changed_by">Changed by %1$s</string>
    <string name="you_changed">You changed %1$s\'s</string>
    <string name="title_share">Share</string>
    <string name="title_write_me">Write Me</string>
    <string name="title_rate_us">Rate Us</string>
    <string name="title_settings">Setting</string>
    <string name="share_app">https://play.google.com/store/apps/details?id=in.thetechguru.walle.remote.abremotewallpaperchanger</string>
    <string name="main_act_share_app_text">\nEnjoy this unique application which allows you to change wallpaper of loved ones (or not so much loved ones for that matter) remotely.\n\n</string>
    <string name="main_act_share_app_choose">Choose One</string>
    <string name="au_email_id">amit.bhandari.c@gmail.com</string>
    <string name="main_act_rate_us">Loving AB Remote Wallpaper Changer? Please take a time to rate it on store.</string>
    <string name="main_act_rate_us_title">Rate Us</string>
    <string name="blocked_toast">%1$s added to block list</string>
    <string name="unblocked_toast">%1$s removed from block list</string>
    <string name="friend_removed_toast">%1$s removed from friend list</string>
    <string name="friend_added_toast">Now you can change %1$s\'s wallpaper</string>
    <string name="title_ab_music">AB Music</string>
    <string name="title_find_me_on_instagram">Find me on Instagram</string>
    <string name="tap_to_change">Tap to change</string>
    <string name="tap_to_copy">Tap to copy username</string>
    <string name="error_invalid_display_name">Invalid Name. Should be minimum 6 characters.</string>
    <string name="title_clear_history">Clear History</string>
    <string name="status_empty_history">Empty history.</string>
    <string name="history_info_text">All wallpaper changes will be logged and displayed here, if any.</string>
    <string name="clear">Clear</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="history_clear_warning">This is irreversible process and data will be permanently deleted.</string>
    <string name="unblock_warn">Unblock %1$s ?</string>
    <string name="unblock">Unblock</string>
    <string name="block_warn">Block %1$s ?</string>
    <string name="block">Block</string>
    <string name="remove_friend_warn">Remove friend %1$s ?</string>
    <string name="remove">Remove</string>
    <string name="reject_friend_warn">Reject friend %1$s ?</string>
    <string name="reject">Reject</string>
    <string name="signout">Sign out</string>
    <string name="logout_warn">Your wallpaper change logs will be cleared and your friends won\'t be able to change your wallpaper anymore. Do you want to logout?</string>
    <string name="error_no_network_swipe_down">No network, swipe down to refresh</string>
    <string name="retrying">Retrying…</string>
    <string name="no_network_retry">No network, touch here to retry.</string>
    <string name="title_how_it_works">How does it work?</string>
    <string name="how_it_works_title">How does this work?</string>
    <string name="how_it_works_content">3 simple steps to change wallpaper remotely. \n\n

        1. Install AB Remote Wallpaper Changer in mobile of person you wish to change wallpaper for.\n\n
        2. Sign up and generate unique username. (In your case, it is %1$s)\n\n
        3. Add him/her by clicking on add button on right bottom side and wait for him/her to accept your request.\n\n

        \n And that\'s it. Start changing wallpapers remotely.
    </string>
    <string name="how_it_works_pos">Got it</string>
    <string name="pref_first_install">first_install</string>
    <string name="global_count">Global wallpaper change count : %1$s</string>
    <string name="error_block_mode">Block mode active. \n\n In block mode, no one can change your wallpaper.  \n\n Touch the switch on top right side for disabling block mode.</string>
    <string name="dialog_block_mode_title">Enable Block mode</string>
    <string name="dialog_block_mode_content">In block mode, no one will be able to change your wallpaper. And you won\'t be able to change any one\'s wallpaper.</string>
    <string name="dialog_block_mode_pos">Enable</string>
    <string name="error_user_in_blocked_mode">%1$s is in blocked mode, cannot change wallpaper</string>
    <string name="title_privacy_policy">Privacy Policy</string>
    <string name="dialog_privacy_policy_content">AB Remote Wallpaper Changer do not keep any history of wallpaper changes on server. \n\n
        Photos you set for other people are deleted as soon as wallpaper change operation become successful. If unsuccessful, photos are periodically cleaned from server. \n\n
        AB Remote Wallpaper Changer do record logs of operations for debug and development purpose on server. \n\n
        Reach out to amit.bhandari.c\@gmail.com for knowing more.
    </string>
    <string name="dialog_privacy_policy_pos">Got it</string>
    <string name="title_set_remote_wall">Set remote wallpaper</string>
    <string name="choose_friend">Choose friend</string>
    <string name="pref_user_obj">user_obj</string>
    <string name="banner_main">ca-app-pub-3876828674787345/4338221259</string>
    <string name="au_version">Version 1.0.0 </string>
    <string name="au_made_with_love">Made with </string>
    <string name="au_made_in_india">in India </string>
    <string name="question1">Why this app was created?</string>
    <string name="question2">It doesn\'t work.</string>
    <string name="question3">I don\'t like your app. </string>
    <string name="question4">I would like this app to do more than just changing wallpaper.</string>
    <string name="question5">How can I contact you?</string>
    <string name="question6">What is the best way to pay back to developer?</string>
    <string name="answer1">One day I was sitting doing nothing (literally) and my gf pinged me her mobile desktop screenshot saying how cool her wallpaper is and then it hit me, wouldn\'t it be cool if I can change wallpaper for someone else.
	\n Just kidding, I am a 9gagger, we don\'t have gf or life for that matter.</string>
    <string name="answer2">Well, it should. If it doesn\'t, chances are that mobile of person whose wallpaper you are trying to change is not allowing this app to run in background. Or he uninstalled the app. Or he is in blocked mode. Or I have left some nasty bug in my code. Please please do not leave 1 star rating for my app on store, it steals my sleep at night.</string>
    <string name="answer3">Hmm. What can I say. You just are not cool enough.</string>
    <string name="answer4">If you are a Android developer, you are in luck. This app is open source and you could do anything you want with it.
	If you are not, sorry to disappoint, I don\'t have time or resource to do it.</string>
    <string name="answer5">Best and fastest way would be Instagram. If you like EDM, or you like forwarding memes, or hate life in general, we would really get along good. Link you will find below.</string>
    <string name="answer6">Sending me check of 1 Million dollars. Just kidding, 5* rating on store would do better than million dollars.</string>
    <string name="button_github">Github</string>
    <string name="button_contact_me">Contact me</string>
    <string name="button_rate">Rate</string>
</resources>