<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <item
        android:id="@+id/nav_history"
        android:icon="@drawable/ic_history_black_24dp"
        android:title="@string/title_history" />

    <item
        android:id="@+id/nav_how_does_it_work"
        android:icon="@drawable/ic_info_outline_black_24dp"
        android:title="@string/title_how_it_works" />

    <item
        android:id="@+id/nav_privacy_policy"
        android:icon="@drawable/ic_assignment_black_24dp"
        android:title="@string/title_privacy_policy" />

    <item
        android:id="@+id/nav_share"
        android:icon="@drawable/ic_share_black_24dp"
        android:title="@string/title_share" />

    <item
        android:id="@+id/nav_write_me"
        android:icon="@drawable/ic_feedback_black_24dp"
        android:title="@string/title_write_me" />

    <item
        android:id="@+id/nav_ab_music"
        android:icon="@drawable/ic_library_music_black_24dp"
        android:title="@string/title_ab_music" />

    <item
        android:id="@+id/nav_rate"
        android:icon="@drawable/ic_star_black_24dp"
        android:title="@string/title_rate_us" />

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/action_settings" />

    <item
        android:id="@+id/nav_signout"
        android:icon="@drawable/ic_people_black_24dp"
        android:title="@string/title_sign_out" />

    <item
        android:id="@+id/nav_instagram"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/title_find_me_on_instagram" />



</menu>
