<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/full_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/back1"
        android:background="@color/black"
        android:contentDescription="full_background"
        tools:ignore="HardcodedText" />


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_"
        android:layout_marginTop="25dp"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:popupTheme="@style/AppTheme.PopupOverlay" />

    <ScrollView
        android:id="@+id/questions"
        android:layout_below="@+id/toolbar_"
        android:layout_width="match_parent"
        android:layout_above="@+id/buttons"
        android:layout_height="wrap_content">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:paddingBottom="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:text="@string/question1"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:paddingStart="5dp"
                android:textColor="@color/white"
                android:paddingBottom="15dp"
                android:text="@string/answer1"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:text="@string/question2"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:paddingStart="5dp"
                android:textColor="@color/white"
                android:paddingBottom="15dp"
                android:text="@string/answer2"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:text="@string/question3"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:paddingStart="5dp"
                android:textColor="@color/white"
                android:paddingBottom="15dp"
                android:text="@string/answer3"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:text="@string/question4"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:paddingStart="5dp"
                android:textColor="@color/white"
                android:paddingBottom="15dp"
                android:text="@string/answer4"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:text="@string/question5"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="@color/white"
                android:paddingStart="5dp"
                android:paddingBottom="15dp"
                android:text="@string/answer5"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:text="@string/question6"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:paddingStart="5dp"
                android:textColor="@color/white"
                android:paddingBottom="15dp"
                android:text="@string/answer6"
                tools:ignore="RtlSymmetry" />

        </LinearLayout>

    </ScrollView>
    
    <LinearLayout
        android:id="@+id/buttons"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/button_github"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button_github"
            android:singleLine="true"
            android:theme="@style/AllCapsRemovedButton"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/button_contact"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:theme="@style/AllCapsRemovedButton"
            android:text="@string/button_contact_me"
            android:singleLine="true"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/button_rate"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:theme="@style/AllCapsRemovedButton"
            android:text="@string/button_rate"
            android:singleLine="true"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

</RelativeLayout>