<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="30dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.v7.widget.CardView
        app:cardBackgroundColor="@color/black"
        android:layout_margin="5dp"
        android:layout_centerHorizontal="true"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:scaleType="centerCrop"
        android:id="@+id/photo_wrapper"
        app:cardCornerRadius="50dp"
        android:innerRadius="0dp"
        android:shape="ring"
        android:thicknessRatio="1.9">

        <ImageView
            android:id="@+id/image_view_profile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignStart="@+id/photo_wrapper"
            android:layout_alignTop="@+id/photo_wrapper"
            android:src="@drawable/person_blue"
            tools:ignore="ContentDescription"/>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:visibility="invisible"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/tap_to_change"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/photo_wrapper"
        android:layout_centerHorizontal="true"
        android:text="@string/tap_to_change"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tap_to_copy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username"
        android:layout_centerHorizontal="true"
        android:text="@string/tap_to_copy"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/display_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tap_to_copy"
        android:layout_marginTop="13dp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:text="@string/hint_display_name"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_marginTop="30dp"
        android:textColor="@color/white"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tap_to_change"
        android:layout_centerHorizontal="true"
        android:textIsSelectable="true"
        android:text="@string/username_text"
        android:textSize="20sp" />


    <TextView
        android:id="@+id/email_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/display_name"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:layout_marginTop="13dp"
        android:text="@string/email_id_hint"
        android:textSize="20sp" />

</RelativeLayout>